--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dees estate/css/bootstrap.min.css">
     <link rel="stylesheet" href="/dees estate/css/style.css">
+    <link rel="icon" hrf="/dees estate/images/Dee’s Estate.png">
     <title>Dee's Estate</title>
 </head>
 <body>
