--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dees estate/css/bootstrap.min.css">
-<!--     <link rel="stylesheet" href="/dees estate/css/style.css"> -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/dees estate/css/style.css">
     <link rel="icon" href="/dees estate/images/Dee’s Estate.png">
     <title>Dee's Estate</title>
 </head>
