--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dees estate/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/dees estate/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css"> -->
     <title>Dee's Estate</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-sm px-5 p-4 navbar-light bg-*">
         <a class="navbar-brand" href="#">
-            <img src="/dees estate/images/Dee’s Estate.png" alt="logo" width="20%">
+            <img src="images/Dee’s Estate.png" alt="logo" width="20%">
         </a>
         <button class="navbar-toggler d-lg-none" id="toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +59,7 @@
                 <h3 class="mt-3 hero-subtext">Creating quality urban lifestyles,building stronger communities</p>
                 <button class="btn btn-blue mt-4 hero-button">Learn More</button> 
                 <button class="btn mt-4 hero-button" data-toggle="modal" data-target="#modelId">
-                    <img src="/dees estate/images/Group 1 (3).png" alt="play Button" width="30%">
+                    <img src="images/Group 1 (3).png" alt="play Button" width="30%">
                 </button>
                 
                 <!-- Modal -->
@@ -71,7 +73,7 @@
                                     </button>
                             </div>
                             <div class="modal-body">
-                                <video src="/dees estate/images/basketball.mp4" width="100%" controls></video>
+                                <video src="images/basketball.mp4" width="100%" controls></video>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-blue" data-dismiss="modal">Close</button>
@@ -81,7 +83,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="/dees estate/images//Rectangle 2.jpg" class="hero-image" alt="Hero Image" width="100%">
+                <img src="images/Rectangle 2.jpg" class="hero-image" alt="Hero Image" width="100%">
             </div>
         </div>
     </section>
@@ -119,7 +121,7 @@
 
                 <div>
                     <button class="btn btn-blue">
-                        <img src="/dees estate/images/bx_search.png" alt="search-icon" width="15%">
+                        <img src="images/bx_search.png" alt="search-icon" width="15%">
                         Search</button>
                 </div>
             </div>
@@ -135,7 +137,7 @@
             <div class="row text-center">
                 <div class="col-lg-4">
                     <div class="card m-4 p-5 d-flex justify-content-center text-center">
-                        <img src="/dees estate/images/address mark.png" class="m-auto" alt="" width="20%">
+                        <img src="images/address mark.png" class="m-auto" alt="" width="20%">
                         <h5 class="pt-3 font-weight-bold">Find Home</h5>
                         <p class="text-grey">Our properties are located at prime areas where by there won’t be problem with transportation </p>
                     </div>
@@ -143,7 +145,7 @@
 
                 <div class="col-lg-4">
                     <div class="card m-4 p-5 d-flex justify-content-center text-center">
-                        <img src="/dees estate/images/Smart house.png" class="m-auto" alt="" width="50%">
+                        <img src="images/Smart house.png" class="m-auto" alt="" width="50%">
                         <h5 class="pt-3 font-weight-bold">Make payments</h5>
                         <p class="text-grey">Our estates comes with good network,portable water , 24hrs light and round the clock security.</p>
                     </div>
@@ -151,7 +153,7 @@
 
                 <div class="col-lg-4">
                     <div class="card m-4 p-5 d-flex justify-content-center text-center">
-                        <img src="/dees estate/images/Secure data protection with fingerprint and lock.png" class="m-auto" alt="" width="40%">
+                        <img src="images/Secure data protection with fingerprint and lock.png" class="m-auto" alt="" width="40%">
                         <h5 class="pt-3 font-weight-bold">Make it Official</h5>
                         <p class="text-grey">We have been in business for over 32 years,for client outside the country you can trust  us to deliver well.</p>
                     </div>
@@ -164,7 +166,7 @@
     <section class="container-fluid">
         <div class="row why-us py-5 p-5">
             <div class="col-lg-6 my-5">
-                <img src="/dees estate/images/Rectangle 3.jpg" class="hero-image" alt="House-Image" width="100%">
+                <img src="images/Rectangle 3.jpg" class="hero-image" alt="House-Image" width="100%">
             </div>
 
             <div class="col-lg-6 p-5 why-us-text">
@@ -173,20 +175,20 @@
                     <p class="option feature-subtext">Creating quality urban lifestyles,building stronger communities</p>
                     <div class="spacing py-3">
                         <h5 class="align">
-                            <img src="/dees estate/images/Vector (1).png" alt="" class="mr-2 tick" width="20px">World class
+                            <img src="images/Vector (1).png" alt="" class="mr-2 tick" width="20px">World class
                         </h5>
 
                         <h5 class="align">
-                            <img src="/dees estate/images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Affordable
+                            <img src="images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Affordable
                         </h5>
                     </div>
                     <div class="spacing">
                         <h5 class="align">
-                            <img src="/dees estate/images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Ammenities
+                            <img src="images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Ammenities
                         </h5>
 
                         <h5 class="align">
-                            <img src="/dees estate/images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Trusted
+                            <img src="images/Vector (1).png" alt="" class="mr-2 tick" width="20px">Trusted
                         </h5>
                     </div>
                 </div>
@@ -203,7 +205,7 @@
         <div class="row text-center mt-4">
             <div class="col-lg-4">
                 <div class="card featured-card m-4 p-3 d-flex justify-content-center text-center">
-                    <img src="/dees estate/images/Rectangle 4.jpg" class="m-auto featured-image" alt="" width="100%">
+                    <img src="images/Rectangle 4.jpg" class="m-auto featured-image" alt="" width="100%">
                     <div class="spacing">
                         <h4 class="pt-3">The Palace</h4>
                         <p class="mt-3 p-0">Duplex</p>
@@ -218,7 +220,7 @@
 
             <div class="col-lg-4">
                 <div class="card featured-card m-4 p-3 d-flex justify-content-center text-center">
-                    <img src="/dees estate/images/Rectangle 4 (1).jpg" class="m-auto featured-image" alt="" width="100%">
+                    <img src="images/Rectangle 4 (1).jpg" class="m-auto featured-image" alt="" width="100%">
                     <div class="spacing">
                         <h4 class="pt-3">IVY RORY</h4>
                         <p class="mt-3 p-0">Duplex</p>
@@ -233,7 +235,7 @@
 
             <div class="col-lg-4">
                 <div class="card featured-card m-4 p-3 d-flex justify-content-center text-center">
-                    <img src="/dees estate/images/Rectangle 4 (2).jpg" class="m-auto featured-image" alt="" width="100%">
+                    <img src="images/Rectangle 4 (2).jpg" class="m-auto featured-image" alt="" width="100%">
                     <div class="spacing">
                         <h4 class="pt-3">REXONA</h4>
                         <p class="mt-3 p-0">Duplex</p>
@@ -283,7 +285,7 @@
     <footer class="container-fluid align-center footer features text-light p-5">
         <div class="row padding p-5">
             <div class="col-lg-3 footer-padding">
-                <img src="/dees estate/images/Dee’s Estate (1).png" alt="Footer Logo" width="40%">
+                <img src="images/Dee’s Estate (1).png" alt="Footer Logo" width="40%">
                 <p class="my-2 nunito">Solution for easy and flexible house hunting.You can trust us anywhere through this platform</p>
             </div>
 
@@ -318,7 +320,7 @@
             </div>
         </div>
     </footer>
-    <script src="/dees estate/js/jquery-3.6.0.min.js"></script>
-    <script src="/dees estate/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
