--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="btn-blue text-center">
-        <p class="features p-3">Designed By 
+        <p class="testimonial-subtext p-3">Designed By 
             <a href="https://twitter.com/hardeahorla_?t=hefnfAvpDyE6aGi2NyiZ-A&s=09" target="_blank" class="text-light">@hardeahorla_</a>
             & Developed By 
             <a href="https://twitter.com/dev_olagold?t=Wyf21IcDV13G3K1jf6bNiw&s=09" target="_blank" class="text-light">@dev_olagold</a></p>
